--- a/css/style.css
+++ b/css/style.css
@@ -84,17 +84,7 @@ span{
     font-weight: 700;
     line-height: 1.3;
 }
-@keyframes floatImage{
-    0%{
-        transform: translateY(0);
-    }
-    50%{
-        transform: translateY(-2.4rem);
-    }
-    100%{
-        transform: translateY(0);
-    }
-}
+
 .home-content p{
     font-size: 1.6rem;
 }
@@ -468,6 +458,9 @@ span{
     }
     .contact{
         min-height: auto;
+    }
+    .hi{
+        display: none;
     }
 }
 @media (max-width: 768px){
